# nft-marketplace-solana

./: .gitignore  Anchor.toml  README.md  docker-compose.yml  package-lock.json
anchor/: Anchor.toml  localnet-payer.json  package.json  tsconfig.json
anchor/programs/nft-marketplace/: Cargo.toml
anchor/programs/nft-marketplace/src/: errors.rs  lib.rs  mint.rs  sell.rs  state.rs
anchor/programs/nft-marketplace/src/instructions/: buy.rs  list.rs  metadata.rs  mint.rs  mod.rs
anchor/tests/: nft-marketplace.ts
back-end/: .gitignore  Cargo.toml  Dockerfile
back-end/migrations/2024-11-24-203053_create_nfts_table/: down.sql  up.sql
back-end/src/: db.rs  db_setup.rs  endpoints.rs  main.rs  models.rs  schema.rs
db-init/: init.sql
front-end/: Dockerfile  index.html  package.json  tailwind.config.js
front-end/src/: main.tsx
front-end/src/api/: nftMarketplaceExports.ts  nft_marketplace.json  nft_marketplace.ts
front-end/src/app/: App.tsx  AppRoutes.tsx
front-end/src/components/pages/: Home.tsx  Mint.tsx  NftDetail.tsx  Profile.tsx
front-end/src/components/solana/: SolanaProvider.tsx
front-end/src/components/ui/: DarkModeToggle.tsx  Input.tsx  Modal.tsx  Navbar.tsx  NftCard.tsx  ToastProvider.tsx
programs/nft-marketplace/src/: lib.rs  metadata.rs  mint.rs
tests/: nft-marketplace.ts
