[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "bigdecimal",
]
